@@ -1,5 +1,5 @@
 Package: spatstat.explore
-Version: 3.4-2.007
+Version: 3.4-2.008
 Date: 2025-05-13
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
