@@ -13,4 +13,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-08-20" "3.3-2" 230 517 0 31571 6364
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
 "2025-03-20" "3.4-0" 240 534 0 33260 6364
-"2025-05-13" "3.4-2.007" 240 537 0 33439 6364
+"2025-05-13" "3.4-2.008" 240 537 0 33448 6364
