@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.explore VERSION 3.4-2.007
+        CHANGES IN spatstat.explore VERSION 3.4-2.008
 
 OVERVIEW
 
@@ -27,6 +27,10 @@ BUG FIXES
 
     o Smooth.ppp
     The estimate of standard error could sometimes take the value NaN.
+    Fixed.
+
+    o Smooth.ppp
+    Terminated in some cases with error message "oo not found".
     Fixed.
 
         CHANGES IN spatstat.explore VERSION 3.4-2
